--- a/.github/workflows/main_tourist-guide.yml
+++ b/.github/workflows/main_tourist-guide.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - tourist-guide
 
 on:
@@ -19,7 +16,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: 'java17'
+          java-version: '17'  # Update this to the correct Java version
           distribution: 'microsoft'
 
       - name: Build with Maven
@@ -38,7 +35,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
   
     steps:
       - name: Download artifact from build job
@@ -60,4 +57,3 @@ jobs:
           app-name: 'tourist-guide'
           slot-name: 'Production'
           package: '*.jar'
-          
